cmake_minimum_required(VERSION 3.12)
project(ProgrammingCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProgrammingCpp main.cpp LeetCode/leedcode5685.cpp LeetCode/leetcode5686.cpp primerplus/exception_ex.cpp CodingInterviews/coding_interviews40.cpp LeetCode/leetcode5689.cpp LeetCode/leetcode5690.cpp LeetCode/leetcode5691.cpp LeetCode/leetcode5692.cpp primerplus/autoptr1.cpp CodingInterviews/coding_interviews42.cpp LeetCode/leetcode1603.cpp)
